k8s/servicea.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: servicea
  name: servicea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicea
  template:
    metadata:
      labels:
        app: servicea
    spec:
      containers:
      - image: paulbordea/servicea:1.2
        name: servicea

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: servicea
  name: servicea
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4040
  selector:
    app: servicea
  type: ClusterIP
