k8s/serviceb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serviceb
spec:
  selector:
    matchLabels:
      app: serviceb
  replicas: 1
  template:
    metadata:
      labels:
        app: serviceb
    spec:
      containers:
      - name: serviceb
        image: paulbordea/serviceb:1.0
        ports:
          - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: serviceb
  name: serviceb
  namespace: default
spec:
  ports:
  - port: 80
  selector:
    app: serviceb
  type: ClusterIP
