k8s/networkpolicy_a.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-servicea
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: servicea
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: servicea
