k8s/networkpolicy_b.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-serviceb
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: serviceb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: serviceb
